--- a/install
+++ b/install
@@ -116,7 +116,7 @@ safeln() {
     done
 }
 has() { type "$1" &>/dev/null; }
-running() { pgrep -q "$@"; }
+running() { pgrep "$1" &>/dev/null; }
 
 ###############################################################################
 
