--- a/install
+++ b/install
@@ -232,7 +232,11 @@ case $(uname) in Darwin)
         for xml in Mac/KeyRemap4MacBook/*.xml; do
             [ -e "$xml" ] || continue
             Library_Application_Support_KeyRemap4MacBook_private_xml_after() {
-                local x="$(mdfind KeyRemap4MacBook_cli.app | head -n 1)/Contents/MacOS/KeyRemap4MacBook_cli"
+                local x="$(
+                cli=/Applications/KeyRemap4MacBook.app/Contents/Applications/KeyRemap4MacBook_cli.app
+                if [ -d "$cli" ]; then echo $cli
+                else mdfind KeyRemap4MacBook_cli.app | head -n 1
+                fi)/Contents/MacOS/KeyRemap4MacBook_cli"
                 ! [ -x "$x" ] || "$x" reloadxml
             }
             install Library/"Application Support"/"${xml#Mac/}" "$xml"
