--- a/install
+++ b/install
@@ -250,7 +250,7 @@ case $(uname) in Darwin)
     fi
 
     # install shell/python/perl scripts
-    for s in Mac/Scripts/*.{sh,py,pl}; do
+    for s in Mac/Scripts/{*.{sh,py,pl},Applications/ControlPlane/*.sh}; do
         [ -e "$s" ] || continue
         install Library/"${s#Mac/}" "$s" true true
     done
