git init with default branch main

--- a/install
+++ b/install
@@ -249,6 +249,7 @@ if has git; then
 git config --global color.ui auto
 
 git config --global pull.rebase false
+git config --global init.defaultBranch main
 
 # do you even rerere? https://hackernoon.com/fix-conflicts-only-once-with-git-rerere-7d116b2cec67
 git config --global rerere.enabled true
