--- a/install
+++ b/install
@@ -340,6 +340,8 @@ fi
 
 # Mac OS X
 case $(uname) in Darwin)
+    install .zprofile
+
     running-app() { running "$@"; } # XXX workaround for osascript's intermittent slowness
     #running-app() { [ true = "$(osascript 2>/dev/null -e '
     #        tell application "System Events" to exists process "'"$1"'"')" ]; }
