--- a/install
+++ b/install
@@ -308,6 +308,7 @@ ssh_Makefile_after() {
     for c in .dotfiles/.ssh/config.d/*; do
         install ${c#.dotfiles/}
     done
+    install .ssh/gcp-start-iap-tunnel-ssh-proxy-magic.sh
     install .ssh/aws-ssm-ssh-proxy-magic.sh
     # backup original and enable everything if this is the first time
     if ! [ -d .ssh/config.enabled ]; then
